fix: z-index 9999 on slider-btns + duda-iframe-v2.html new URL for cache bust

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ button {
     right: 50px;
     bottom: 230px;
     display: flex;
-    z-index: 3;
+    z-index: 9999 !important;
 }
 
 .globe-slider .slider-btns button {
